# raylib_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/: ak47.pdn  alert.pdn  background.pdn  background_itch.pdn  background_shop.pdn  background_space.pdn  bam.pdn  bighead.pdn  books.pdn  briefcase.pdn  circle_texture.fs  clipboard.pdn  comic book.pdn  computer.pdn  dialogbackground.fs  faces.pdn  fatman_headshot.pdn  football.pdn  game console.pdn  girlscout cookies.pdn  house.mtl  item_bg_shader.fs  knives.pdn  laser_canon_barrel.pdn  laser_canon_body.pdn  laser_canon_wheel.pdn  lollipop.pdn  memory_progress_shader.fs  nerd.pdn  nerd_headshot.pdn  oldlady.pdn  oldlady_headshot.pdn  poo.pdn  robot.pdn  salesman.pdn  shelf.pdn  shotgunner_headshot.pdn  smile_shader.fs  steak.pdn  timer_shader.fs  (+5 more)
src/: characters.c  characters.h  core.h  dialog.c  dialog.h  encounter.c  encounter.h  entity.h  font_manager.c  font_manager.h  foomain.c  game.h  jump.c  jump.h  main.c  memory_game.c  memory_game_old.c  pick_items.c  pick_items.h  raylib.h  rhythm_game.c  shotgun_game.c  smile_game.c
